--- a/index.html
+++ b/index.html
@@ -8,24 +8,42 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>hellow</h1>
-  <div>
-    <p><img id="jankenpon" src="jan-1024x1024.png" width="100" height="100"></p>
-    <p>あなた<span id="me"></span></p>
-    <button onclick="R_Click(0);">ぐー</button>
-    <button onclick="R_Click(1);">ちょき</button>
-    <button onclick="R_Click(2);">ぱー</button>
-    <div id="Rejan1"></div>
+  <div class="janken_contents">
+    <div class="janken_item">
+      <p>あなた<span id="me"></span></p>
+      <p><img id="jankenpon" src="jan-1024x1024.png" width="100" height="100"></p>
+      <button onclick="R_Click(0);">ぐー</button>
+      <button onclick="R_Click(1);">ちょき</button>
+      <button onclick="R_Click(2);">ぱー</button>
+      <div id="Rejan1"></div>
+    </div>
 
-    <p>コンピュータ<span id="com"></span></p>
-    <p><img id="jankenpon2" src="jan-1024x1024.png" width="100" height="100"></p>
-    <div id="Rejan2"></div>
-    
+    <div class="janken_item">
+      <p>コンピュータ<span id="com"></span></p>
+      <p><img id="jankenpon2" src="jan-1024x1024.png" width="100" height="100"></p>
+      <div class="computer_text" id="Rejan2"></div>
+    </div>
+  </div>
     <p>結果<span id="result"></span></p>
     <div id="Rejan3"></div>
-    <p>勝ちカウント</span></p>
-    <div id="Rejan4"></div>
-  </div>
+    <div class="counter">
+      <div class="counter_item">
+        <p>勝ちカウント</span></p>
+        <button onclick="Reset_Click();">リセット</button>
+      </div>
+      <div class="counter_item">
+        <p>勝ち</p>
+        <div id="wincount">0</div>
+      </div>
+      <div class="counter_item">
+        <p>あいこ</p>
+        <div id="drawcount">0</div>
+      </div>
+      <div class="counter_item">
+        <p>負け</p>
+        <div id="losecount">0</div>
+      </div>
+    </div>
 </body>
 <script src="main.js"></script>
 </html>
