--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div id="Rejan1"></div>
     </div>
 
+    
     <div class="janken_item">
       <p>コンピュータ<span id="com"></span></p>
       <p><img id="jankenpon2" src="jan-1024x1024.png" width="100" height="100"></p>
@@ -26,6 +27,12 @@
   </div>
     <p>結果<span id="result"></span></p>
     <div id="Rejan3"></div>
+    <button id="toggleResults">過去の結果を表示する</button>
+    <div  id="resultsHistoryContainer" class="resultbox" style="display:none;">
+      <ul id="resultsHistoryList">
+      </ul>
+    </div>
+
     <div class="counter">
       <div class="counter_item">
         <p>勝ちカウント</span></p>
@@ -44,6 +51,7 @@
         <div id="losecount">0</div>
       </div>
     </div>
+    
 </body>
 <script src="main.js"></script>
 </html>
